--- a/PNOpenGDPRClient/PNOpenGDPRClient/Base.lproj/Main.storyboard
+++ b/PNOpenGDPRClient/PNOpenGDPRClient/Base.lproj/Main.storyboard
@@ -295,7 +295,7 @@
                                     <segue destination="uRc-CK-nB8" kind="show" id="CUW-FL-c8n"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f6p-Lr-4QZ" userLabel="Request Button">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f6p-Lr-4QZ" userLabel="Status Button">
                                 <rect key="frame" x="16" y="142" width="343" height="33"/>
                                 <color key="backgroundColor" red="0.85098618270000004" green="0.85097014900000001" blue="0.85098105670000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
@@ -304,7 +304,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Request">
+                                <state key="normal" title="Status">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <state key="selected">
@@ -325,7 +325,7 @@
                                     <segue destination="y0v-Ba-He3" kind="show" id="2Fp-Sj-1pw"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7hn-vn-ssb" userLabel="Status Button">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7hn-vn-ssb" userLabel="Request Button">
                                 <rect key="frame" x="16" y="183" width="343" height="33"/>
                                 <color key="backgroundColor" red="0.85098618270000004" green="0.85097014900000001" blue="0.85098105670000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
@@ -334,7 +334,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Status">
+                                <state key="normal" title="Request">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <state key="selected">
@@ -414,7 +414,7 @@
         <!--Status-->
         <scene sceneID="6Hr-vz-EyN">
             <objects>
-                <viewController title="Status" id="y0v-Ba-He3" sceneMemberID="viewController">
+                <viewController title="Status" id="y0v-Ba-He3" customClass="StatusViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tja-tM-WZd"/>
                         <viewControllerLayoutGuide type="bottom" id="67C-dW-lnH"/>
@@ -432,29 +432,39 @@
                                 <fontDescription key="fontDescription" type="system" weight="thin" pointSize="15"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Check Status"/>
+                                <connections>
+                                    <action selector="checkStatus:" destination="y0v-Ba-He3" eventType="touchUpInside" id="ShX-v3-72J"/>
+                                </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Lwb-oQ-H5l">
-                                <rect key="frame" x="37.5" y="110" width="300" height="300"/>
+                                <rect key="frame" x="32" y="110" width="311" height="541"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="Aad-Mv-o62"/>
-                                    <constraint firstAttribute="width" constant="300" id="cKg-gm-3rJ"/>
-                                </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="BJD-V8-yfl">
+                                <rect key="frame" x="169" y="315" width="37" height="37"/>
+                                <color key="color" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Lwb-oQ-H5l" firstAttribute="centerX" secondItem="8Ak-2C-gwY" secondAttribute="centerX" id="JoO-hb-tRi"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="Lwb-oQ-H5l" secondAttribute="bottom" constant="16" id="ETn-PF-pcj"/>
+                            <constraint firstItem="BJD-V8-yfl" firstAttribute="centerY" secondItem="8Ak-2C-gwY" secondAttribute="centerY" id="JRl-b0-WHc"/>
                             <constraint firstItem="Lwb-oQ-H5l" firstAttribute="top" secondItem="VlR-Iq-wEV" secondAttribute="bottom" constant="8" id="Qj9-oj-Bcr"/>
+                            <constraint firstItem="Lwb-oQ-H5l" firstAttribute="leading" secondItem="8Ak-2C-gwY" secondAttribute="leadingMargin" constant="16" id="dXA-Gq-QCt"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Lwb-oQ-H5l" secondAttribute="trailing" constant="16" id="hFW-fb-mci"/>
+                            <constraint firstItem="BJD-V8-yfl" firstAttribute="centerX" secondItem="8Ak-2C-gwY" secondAttribute="centerX" id="hJy-cw-vf9"/>
                             <constraint firstItem="VlR-Iq-wEV" firstAttribute="top" secondItem="tja-tM-WZd" secondAttribute="bottom" constant="8" id="jAb-mI-MDT"/>
                             <constraint firstItem="VlR-Iq-wEV" firstAttribute="leading" secondItem="8Ak-2C-gwY" secondAttribute="leading" constant="16" id="jCw-sT-z4c"/>
                             <constraint firstAttribute="trailing" secondItem="VlR-Iq-wEV" secondAttribute="trailing" constant="16" id="k4c-hS-HLT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="RwK-IN-JQz"/>
                     </view>
+                    <connections>
+                        <outlet property="loadingIndicator" destination="BJD-V8-yfl" id="Imp-ER-yZm"/>
+                        <outlet property="textView" destination="Lwb-oQ-H5l" id="obB-k3-km9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nzi-j1-KaE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
